[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tbai_cbf_mppi"
version = "0.0.6"
dependencies = [
    "numpy==2.2.6",
    "matplotlib==3.10.0",
    "scipy==1.15.2",
    "casadi==3.6.7",
    "sympy==1.13.3",
    "pytest==8.3.4",
    "ruff==0.9.7",
    "pre-commit",
    "seaborn",
    "numba",
    "colored",
    "imageio",
]

[project.optional-dependencies]
cupy-cuda12=["cupy-cuda12x"]
cupy-cuda13=["cupy-cuda13x"]
jax=["jax[cpu]>=0.4.20"]
jax-cuda12=["jax[cuda12]>=0.4.20"]
jax-cuda13=["jax[cuda13]>=0.4.20"]

[tool.ruff]
line-length = 120
indent-width = 2

[tool.ruff.lint]
ignore = ["E731"]

[tool.pytest]
testpaths = ["tests"]

